tests/sksl/errors/DuplicateBinding.metal
### Compilation failed:

error: 2: layout(set=0, binding=0) has already been defined
layout(set=0, binding=0) in int[] y;
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
1 error
